feat: Agregar estructura de carpetas con .gitkeep y documentación
- Añadidos .gitkeep en data/raw, data/processed, outputs/figures, outputs/results, outputs/results/models
- Creado data/raw/README.md con instrucciones de descarga del dataset
- Creado docs/ESTRUCTURA_REPOSITORIO.md con guía de organización
- Actualizado .gitignore para mantener .gitkeep en el repo
- Optimizado setup.ps1 para verificar carpetas en lugar de crearlas
- Actualizado README.md con referencias a nuevos archivos

Ahora el repositorio es completamente clone-ready sin necesidad de crear carpetas manualmente.

--- a/.gitignore
+++ b/.gitignore
@@ -41,12 +41,19 @@ venv.bak/
 # Data files (opcional - comenta si quieres versionar el dataset)
 data/raw/*.csv
 data/processed/*.csv
+# Mantener las carpetas con .gitkeep
+!data/raw/.gitkeep
+!data/processed/.gitkeep
 
 # Output files (opcional - comenta si quieres versionar resultados)
 outputs/figures/*.png
 outputs/results/*.txt
 outputs/results/*.csv
 outputs/results/models/*.pkl
+# Mantener las carpetas con .gitkeep
+!outputs/figures/.gitkeep
+!outputs/results/.gitkeep
+!outputs/results/models/.gitkeep
 
 # IDE
 .vscode/
